# Codex-Auth-Manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  requirements.txt
antigravity-extension/: cam-antigravity-extension-1.12.5.vsix  package-lock.json  package.json
antigravity-extension/src/: extension.ts
app/: account_identity.py  account_usage_store.py  accounts.py  auth_store.py  codex_cli.py  codex_switch.py  config.py  lease_broker_store.py  login_sessions.py  main.py
desktop-app/: README.md  index.html  package-lock.json  package.json  tsconfig.json
desktop-app/src/: bridge.ts  controller.ts  main.ts  state.ts  styles.css  ui.ts
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/src/: lib.rs  main.rs
docs/: broker-lifecycle-testing.md
extension/: error.html  options.html  popup.html  success.html
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
headless-client/: README.md  package-lock.json  package.json
headless-client/src/: agent.ts
openclaw-skill/: SKILL.md
openclaw-skill/references/: auth_manager_contract.md
openclaw-skill/scripts/: report_lease_telemetry.py  (+1 more)
scripts/: run-broker-lifecycle-tests.sh
tests/: test_account_identity_tracking.py  test_auto_persist_reauth.py  test_cached_accounts_api.py  test_docker_isolation.py  test_lease_broker_store.py  test_profile_rename.py  test_relay_handoff.py  test_usage_history_api.py
(+6 files in other folders)
